<resources>
    <string name="app_name">EzFitness</string>
    <string name="ezfitness">EzFitness</string>
    <string name="welcome">Welcome!</string>
    <string name="email_icon">Email Icon</string>
    <string name="email">Email</string>
    <string name="password_icon">Password Icon</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_line">Don\'t have an account? Sign Up</string>
    <string name="profile_picture">profile_picture</string>
    <string name="edit_profile">edit profile button</string>
    <string name="bmi_result">BMI Result: %.2f</string>
    <string name="base_goal_result">Base Goal: %.2f</string>
    <string name="invalid_input">Invalid input. Please enter valid values.</string>
    <string name="password_toggle_icon" />


    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="goal_options">
        <item>Bulk</item>
        <item>Keep</item>
        <item>Cut</item>
    </string-array>

    <string-array name="activity_level_options">
        <item>Sedentary</item>
        <item>Light Active</item>
        <item>Moderately Active</item>
        <item>Very Active</item>
        <item>Extra Active</item>
    </string-array>


    //kx
    <string name="WorkOut">WorkOut</string>
    <string name="Ezfiness">Ezfiness</string>
    <string name="Categories">Categories</string>
    <string name="Boxing">BOXING</string>
    <string name="Hiit">HIIT</string>
    <string name="Yoga">YOGA</string>
    <string name="Pilates">Pilates</string>
    <string name="Workupplan">Workout Plan</string>
    <string name="Workuppreview">Workout Preview</string>
    <string name="Complete">30 sec workout / 10 sec rest,9 min Motivation music,Intense home workout</string>
    <string name="Set">SET 1 (3 TIMES)</string>
    <string name="Planner">Planner</string>
    <string name="mincol">8 min ~ 120 col</string>
    <string name="WorkUpImage">WorkUp Image</string>
    <string name="Rectangle">Rectangle</string>
    <string name="storage_url">gs://ezfitness-78842.appspot.com</string>
    <string name="database_url">https://ezfitness-78842-default-rtdb.asia-southeast1.firebasedatabase.app/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="SitUp">SitUp</string>
    <string name="Dips">Dips</string>
    <string name="Squat">Squat</string>

    //tabata
    <string name="Col">135 cal</string>
    <string name="Min">9 min</string>
    <string name="Tabata">Tabata</string>
    <string name="Relax">00:10 rest</string>
    <string name="Jumprope">Jump rope</string>
    <string name="Breakdancer_kick_out">Breakdancer kick out</string>
    <string name="Diamond">Diamond+ standard push up</string>
    <string name="Russian_twist">Russian twist</string>
    <string name="diamond_pushup">Diamond rotational push up</string>
    <string name="Switch_mountain">Switch mountain climber</string>
    <string name="Lateral">Lateral sprinter crunch</string>
    <string name="Standard">Diamond to standard push up</string>
    <string name="LungesR">Lunges reverse to high knee(right)</string>
    <string name="LungesL">Lunges reverse to high knee(left)</string>
    <string name="Crowpose">Crow pose</string>
    <string name="PlankJack">Plank jack + mountain climber jump</string>
    <string name="PushUpwide">Push up wide</string>
    <string name="Speed">Jump rope fast or run at your maximum speed</string>
    <string name="GetStar">Get Start!</string>

    //abs
    <string name="describe">45 sec workout / 30 sec rest,10 min WorkUp,Intense home workout</string>
    <string name="min10">10 min</string>
    <string name="col1">150 cal</string>
    <string name="abs">Abs</string>
    <string name="heeltouches">Heel Touches</string>
    <string name="Crosscrunches">Cross crunches</string>
    <string name="KneeTouch">Knee Touch</string>
    <string name="LegRaise">Leg Raise</string>
    <string name="LongArmCrunch">Long Arm Crunch</string>
    <string name="V_upCrunch">V-up Crunch</string>
    <string name="Crunches">Crunches</string>
    <string name="SeatedInOutLegRaise">Seated In Out Leg Raise</string>
    <string name="V_upClap">V-up Clap</string>
    <string name="Oblique">Oblique Crunches (R+L)</string>

    //leg
    <string name="Leg">Leg</string>
    <string name="describeL">40 sec workout / 10 sec rest,7 min WorkUp,Intense home workout</string>
    <string name="min7">7 min</string>
    <string name="col3">125 cal</string>
    <string name="Sumo">Sumo Squat</string>
    <string name="Curtsy">Curtsy lunge</string>
    <string name="SideLunge">Side Lunge</string>
    <string name="StaticLunge">Static Lunge</string>
    <string name="Morning_Squat">Good Morning Squat</string>
    <string name="Overhead">Bodyweight Overhead Squat</string>
    <string name="Morning">Bodyweight Good Morning Row</string>
    <string name="Tiptoe">Sumo Squat Tip Toe</string>
    <string name="Wall">Sit(wall)</string>


    //Push Up
    <string name="describeP">30 sec workout / 15 sec rest,9 min WorkUp,Intense home workout</string>
    <string name="min9">9 min</string>
    <string name="col4">130 cal</string>
    <string name="Up">Push Up</string>
    <string name="Kneeling">Kneeling Push-Up</string>
    <string name="Diamond_Push">Diamond Push-up</string>
    <string name="U">Push-up</string>
    <string name="Reverse">Reverse kneeling push-up</string>
    <string name="Ball">Med Ball Push-Up</string>
    <string name="Wide">Wide Push-up</string>
    <string name="Clap">Clap Push-Up</string>
    <string name="Incline">Incline Push-Up</string>
    <string name="Decline">Decline Push-Up</string>
    <string name="Push_Up_Rotational">Kneeling Push-Up Rotational</string>

    //boxing
    <string name="describeB">35 sec workout / 05 sec rest, 7 min WorkUp,Intense home workout</string>
    <string name="boxingDescribe">
Boxercise, or sometimes referred to as Boxercise workout,
        is a high-intensity aerobic exercise. Caloric expenditure
        varies among individuals based on factors such as
        personal differences, exercise intensity, and duration.
        Generally, boxercise training is a full-body workout that
        provides high cardiovascular exercise and muscle endurance training.</string>


    //hitt
    <string name="describeH">40 sec workout / 15 sec rest, 15 min WorkUp,Intense home workout</string>
    <string name="hiitDescribe">HIIT (High-Intensity Interval Training) calorie burn varies depending on individual factors, exercise intensity, and duration. In general, HIIT is an efficient aerobic exercise that can burn a significant amount of calories in a short time.</string>

    //yoga
    <string name="describeY">50 sec workout / 10 sec rest, 25 min WorkUp,Intense home workout</string>
    <string name="yogaDescribe">The calorie expenditure in yoga varies based on the type of yoga, the intensity of the session, individual differences, and physical condition. Generally, compared to high-intensity aerobic exercises, yoga tends to have a lower calorie burn. However, the benefits of yoga are more focused on flexibility, balance, strength, and mental well-being.</string>

    //pilates
    <string name="describePi">30 MIN FULL BODY WORKOUT ,Intense home workout</string>
    <string name="pilatesDescribe">
Pilates is a form of holistic body exercise that emphasizes control, balance, flexibility, strength, and comprehensive respiratory training. This exercise method was originally created by German fitness trainer Joseph Pilates in the early 20th century and was initially referred to as "Contrology." It later became widely known as Pilates.</string>
    <string name="pilatesDescribe1">Pilates focuses on developing the strength and stability of the core muscle groups, including the muscles around the torso, such as the abdomen, back, buttocks, and pelvic region. Fundamental Pilates movements highlight body symmetry, aiming to improve posture and movement efficiency through precise and fluid motions.</string>

    <string name="n">YouTube iFrame</string>

    <string name="add_question_fragment_label">Add Question</string>

    <string name="SelectVideo">Select Video</string>
    <string name="UploadVideo">Upload Video</string>
    <string name="Cancel">Cancel</string>
    <string name="Fitnessgoal">Fitness Goal</string>
    <string name="Sun">Sun</string>
    <string name="Mon">Mon</string>
    <string name="Tus">Tus</string>
    <string name="Wed">Wed</string>
    <string name="Thu">Thu</string>
    <string name="Fri">Fri</string>
    <string name="Sat">Sat</string>
    <string name="Okay">Okay</string>
    <string name="Inbody">Inbody Report</string>
    <string name="Notification">Notification</string>
    <string name="done">Okay</string>
</resources>

