<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ezfitness"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/textAppName"
        android:layout_alignStart="@id/textAppName"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/imageEmailIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_email"
        android:layout_below="@id/textWelcome"
        android:layout_marginTop="120dp"
        android:layout_alignStart="@id/textWelcome"
        android:contentDescription="@string/email_icon" />

    <TextView
        android:id="@+id/textEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_toEndOf="@id/imageEmailIcon"
        android:layout_alignBottom="@id/imageEmailIcon"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editTextUsernameEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageEmailIcon"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext_background"
        android:autofillHints="user123@gmail.com" />

    <ImageView
        android:id="@+id/imagePasswordIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsernameEmail"
        android:layout_alignStart="@id/textEmailLabel"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_password"
        android:contentDescription="@string/password_icon" />

    <TextView
        android:id="@+id/textPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_toEndOf="@id/imagePasswordIcon"
        android:layout_alignBottom="@id/imagePasswordIcon"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagePasswordIcon"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext_background"
        android:autofillHints="user123" />

    <ImageView
        android:id="@+id/imagePasswordToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/editTextPassword"
        android:layout_alignBottom="@id/editTextPassword"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/password_toggle_icon"
        android:src="@drawable/ic_eye" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="8dp"
        android:layout_alignStart="@id/editTextPassword"
        android:clickable="true"
        android:onClick="onForgotPasswordClick" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@id/textViewForgotPassword"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account? Sign Up"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@id/buttonSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />


</RelativeLayout>
